[gd_scene load_steps=9 format=2]

[ext_resource path="res://JamKit/TestScenes/EventTests/PurpleSprite.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://JamKit/TestScenes/EventTests/GreenSprite.gd" type="Script" id=3]
[ext_resource path="res://JamKit/TestScenes/EventTests/RedSprite.gd" type="Script" id=4]
[ext_resource path="res://JamKit/TestScenes/EventTests/YellowSprite.gd" type="Script" id=5]
[ext_resource path="res://JamKit/Feedback/FeedbackRunner.gd" type="Script" id=6]
[ext_resource path="res://JamKit/Feedback/Transform/ScaleFeedback2D.gd" type="Script" id=7]
[ext_resource path="res://JamKit/TestScenes/EventTests/Label.gd" type="Script" id=8]

[node name="Node2D" type="Node2D"]

[node name="GreenSprite" type="Sprite" parent="."]
modulate = Color( 0.603922, 1, 0.521569, 1 )
position = Vector2( 333, 301 )
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="PurpleSprite" type="Sprite" parent="."]
modulate = Color( 0.768627, 0.431373, 1, 1 )
position = Vector2( 504, 305 )
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="RedSprite" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 700, 313 )
texture = ExtResource( 2 )
script = ExtResource( 4 )

[node name="YellowSprite" type="Sprite" parent="."]
modulate = Color( 0.992157, 1, 0.0901961, 1 )
position = Vector2( 698, 179 )
texture = ExtResource( 2 )
script = ExtResource( 5 )

[node name="FeedbackRunner" type="Node" parent="YellowSprite"]
script = ExtResource( 6 )
is_debug_trigger_enabled = false

[node name="ScaleFeedback2D" type="Node" parent="YellowSprite/FeedbackRunner"]
script = ExtResource( 7 )
TargetPath = NodePath("../..")
run_time = 0.2
should_return_to_previous = false
can_interrupt = true
change_mode = 1
scale_change = Vector2( 1, 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="CanvasLayer/Control"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.1
anchor_bottom = 0.1
margin_right = 40.0
margin_bottom = 14.0
text = "RED EVENTS REMAINING: "
script = ExtResource( 8 )
